@startuml
class SousCategorie {
	**id : int**
	imageSousCategorie : string
	nomSousCategorie : string
	<color:#0000dd>categorie : Categorie</color>
	<color:#0000dd>produits : Produit[]</color>
}

class Commande {
	**id : int**
	prixAchatCom : float
	prixVenteCom : float
	conditionReg : bool
	dateFact : DateTimeInterface
	numFact : string
	reduction : float
	comExp : bool
	numCom : string
	nomCom : string
	dateCom : DateTimeInterface
	totalTtc : int
	tauxTva : int
	prixHtva : int
	indicReduc : int
	totalHtva : int
	<color:#0000dd>utilisateur : Utilisateur</color>
	<color:#0000dd>bondelivraison : Bondelivraison</color>
	<color:#0000dd>contients : Contient[]</color>
	adresse_livrai : string
	adresse_factu : string
}

class Quantiter {
	**id : int**
	quantite : int
	<color:#0000dd>bondelivraison : Bondelivraison</color>
	<color:#0000dd>produit : Produit</color>
}

class Categorie {
	**id : int**
	nomCategorie : string
	imageCategorie : string
	<color:#0000dd>produits : Produit[]</color>
	<color:#0000dd>sousCategories : SousCategorie[]</color>
}

class Utilisateur {
	**id : int**
	email : string
	roles : array
	password : string
	<color:#0000dd>commande : Commande[]</color>
	nomcli : string
	coeffcli : int
	numtelephone : string
	prenomcli : string
	<color:#0000dd>contacts : Contact[]</color>
	adresselivrai : string
	adressefactu : string
	catecli : string
}

class Produit {
	**id : int**
	prixAchat : int
	nomProd : string
	stockprod : int
	photoProduit : string
	LibCourtProd : string
	libLongProd : string
	<color:#0000dd>categorie : Categorie</color>
	<color:#0000dd>fournisseur : Fournisseur</color>
	<color:#0000dd>contients : Contient[]</color>
	<color:#0000dd>quantiters : Quantiter[]</color>
	<color:#0000dd>souscategorie : SousCategorie</color>
}

class Bondelivraison {
	**id : int**
	numLivrais : string
	logoEntreprise : string
	dateLivCom : DateTimeInterface
	<color:#0000dd>commande : Commande[]</color>
	<color:#0000dd>quantiters : Quantiter[]</color>
}

class Fournisseur {
	**id : int**
	nomFournisseur : string
	contactFournisseur : string
	adresseFournisseur : string
	telephoneFournisseur : string
	<color:#0000dd>produits : Produit[]</color>
}

class Contient {
	**id : int**
	quantite : int
	<color:#0000dd>commande : Commande</color>
	<color:#0000dd>produit : Produit</color>
}

class Contact {
	**id : int**
	Message : string
	date : DateTimeInterface
	<color:#0000dd>utilisateur : Utilisateur</color>
}

SousCategorie "*"--"1" Categorie
SousCategorie "1"--"*" Produit
Commande "*"--"1" Utilisateur
Commande "*"--"1" Bondelivraison
Commande "1"--"*" Contient
Quantiter "*"--"1" Bondelivraison
Quantiter "*"--"1" Produit
Categorie "1"--"*" Produit
Utilisateur "1"--"*" Commande
Utilisateur "1"--"*" Contact
Produit "*"--"1" Fournisseur
Produit "1"--"*" Contient


hide methods

hide circle

@enduml
